updated sound modules

--- a/Felinemotion/Untitled.ipynb
+++ b/Felinemotion/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,17 +25,24 @@
     "    src_mel = librosa.feature.melspectrogram(y=src, sr=sr)\n",
     "    return src_mel\n",
     "\n",
-    "def save_csv(sound_folder,csv_folder):\n",
+    "def save_csv(sound_folder):\n",
     "    files_list = os.listdir(sound_folder)\n",
+    "    temp = convert_mel_one(join(sound_folder,files_list[0]))\n",
+    "    del files_list[0]\n",
+    "    csv_file = temp.flatten()\n",
     "    for i in files_list:\n",
     "        converted = convert_mel_one(join(sound_folder,i))\n",
-    "        i = i.replace('.wav', '.csv')\n",
-    "        savetxt(join(csv_folder,i), converted)\n",
+    "        flattened = converted.flatten()\n",
+    "        csv_file = np.vstack((csv_file,flattened))\n",
+    "    \n",
+    "    savetxt(sound_folder+'/raw.csv',csv_file,delimiter=\",\")\n",
     "        \n",
-    "input_folder = '../data/vid/trainingSet/raw'\n",
-    "output_folder = '../data/csv'\n",
+    "        \n",
     "\n",
-    "save_csv(input_folder, output_folder)\n",
+    "folder_name = '../data/vid/trainingSet/raw'\n",
+    "\n",
+    "\n",
+    "save_csv(folder_name)\n",
     "\n",
     "\n"
    ]
