--- a/Felinemotion/weishi_test_example.ipynb
+++ b/Felinemotion/weishi_test_example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,19 +22,21 @@
     "    src, sr = librosa.load(sound, sr=SR, mono=True)\n",
     "    len_second = 3.0 # 3 seconds\n",
     "    src = src[:int(sr*len_second)] # crop first 3 seconds\n",
+    "    if len(src) < int(sr*len_second):\n",
+    "        N = int(sr*len_second) - len(src)\n",
+    "        src = np.pad(src, (0, N), 'constant')\n",
     "    src_mel = librosa.feature.melspectrogram(y=src, sr=sr)\n",
-    "    return src_mel\n",
+    "    return src_mel.flatten()\n",
+    "\n",
     "\n",
     "def save_csv(sound_folder):\n",
-    "    files_list = os.listdir(sound_folder)\n",
-    "    temp = convert_mel_one(join(sound_folder,files_list[0]))\n",
-    "    del files_list[0]\n",
-    "    csv_file = temp.flatten()\n",
+    "    files_list = os.listdir(sound_folder)    \n",
+    "    csv_file = convert_mel_one(join(sound_folder,files_list[3]))\n",
+    "    del files_list[3]\n",
     "    for i in files_list:\n",
-    "        converted = convert_mel_one(join(sound_folder,i))\n",
-    "        flattened = converted.flatten()\n",
-    "        csv_file = np.vstack((csv_file,flattened))\n",
-    "    \n",
+    "        if i.endswith('.wav'):\n",
+    "            converted = convert_mel_one(join(sound_folder,i))\n",
+    "            csv_file = np.vstack((csv_file,converted))\n",
     "    savetxt(sound_folder+'/raw.csv',csv_file,delimiter=\",\")\n",
     "        \n",
     "        \n",
