--- a/Felinemotion/weishi_test_example.ipynb
+++ b/Felinemotion/weishi_test_example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,6 +16,11 @@
     "from numpy import asarray\n",
     "from numpy import savetxt\n",
     "from os.path import join\n",
+    "from sklearn.preprocessing import LabelEncoder, StandardScaler\n",
+    "from sklearn.decomposition import PCA\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")\n",
     "\n",
     "def convert_mel_one(sound):\n",
     "    SR = 16000\n",
@@ -29,24 +34,70 @@
     "    return src_mel.flatten()\n",
     "\n",
     "\n",
-    "def save_csv(sound_folder):\n",
+    "def save_csv_raw(sound_folder):\n",
     "    files_list = os.listdir(sound_folder)    \n",
-    "    csv_file = convert_mel_one(join(sound_folder,files_list[3]))\n",
-    "    del files_list[3]\n",
+    "    csv_file = np.zeros(12032)\n",
+    "    classifier = np.zeros(0)\n",
     "    for i in files_list:\n",
     "        if i.endswith('.wav'):\n",
     "            converted = convert_mel_one(join(sound_folder,i))\n",
+    "            classifier_itr = i[:4]\n",
+    "            classifier = np.append(classifier,classifier_itr)\n",
     "            csv_file = np.vstack((csv_file,converted))\n",
+    "            \n",
+    "    classifier = classifier[np.newaxis].T\n",
     "    savetxt(sound_folder+'/raw.csv',csv_file,delimiter=\",\")\n",
+    "    return classifier\n",
     "        \n",
     "        \n",
     "\n",
     "folder_name = '../data/vid/trainingSet/raw'\n",
-    "\n",
-    "\n",
-    "save_csv(folder_name)\n",
+    "classifier = save_csv_raw(folder_name)\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_features = pd.read_csv('../data/vid/trainingSet/raw/raw.csv')\n",
+    "folder_name = '../data/vid/trainingSet/raw'\n",
+    "classifier = save_csv_raw(folder_name)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scaler = StandardScaler()\n",
+    "X_features = scaler.fit_transform(X_features)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pca = PCA(n_components=20)\n",
+    "pca.fit(X_features)\n",
+    "x_reduced = pca.transform(X_features)\n",
+    "full = pd.DataFrame(np.append(classifier, x_reduced,1))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "full.to_csv (r'../data/vid/trainingSet/raw/full.csv', index = None, header=False)"
    ]
   }
  ],
