--- a/Felinemotion/SVM.ipynb
+++ b/Felinemotion/SVM.ipynb
@@ -7,6 +7,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
+    "import os\n",
     "import pandas as pd\n",
     "from sklearn.svm import LinearSVC\n",
     "from sklearn.model_selection import train_test_split"
@@ -19,8 +20,16 @@
    "outputs": [],
    "source": [
     "def csv_merge(image, audio):\n",
+    "    \n",
+    "#     check whether the new image and audio data exist in the current work directory\n",
+    "    if not os.path.exists(image):\n",
+    "      raise ValueError(\"Invalid input file.\")\n",
+    "    if not os.path.exists(audio):\n",
+    "      raise ValueError(\"Invalid input file.\")\n",
+    "        \n",
     "    image = pd.read_csv(image)\n",
     "    audio = pd.read_csv(audio)\n",
+    "\n",
     "    \n",
     "    data = audio.merge(image, on='catID')\n",
     "    data = data.iloc[:,1:]\n",
@@ -30,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,12 +59,59 @@
     "    clf.fit(X, y)\n",
     "    \n",
     "#     read test csv into dataframe\n",
+    "    if not os.path.exists(term):\n",
+    "      raise ValueError(\"Invalid input file.\")\n",
+    "    \n",
     "    test = pd.read_csv(term)\n",
     "    test = test.iloc[:, 1:]\n",
     "    \n",
     "    y_pred = clf.predict(test)\n",
     "    return(y_pred)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "csv_merge('image_test.csv', 'audio_test.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/Clara/opt/anaconda3/lib/python3.7/site-packages/sklearn/svm/base.py:929: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  \"the number of iterations.\", ConvergenceWarning)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array(['angry'], dtype=object)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "classification('data_test.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
