--- a/Felinemotion/weishi_test_example.ipynb
+++ b/Felinemotion/weishi_test_example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,53 +22,22 @@
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
-    "import sound_to_csv\n"
+    "import audio_training\n",
+    "import audio_input\n",
+    "import audio_create_model\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "#### create data for model\n",
-    "folder_name = '../data/vid/trainingSet/raw'\n",
-    "classifier = sound_to_csv.save_csv_raw(folder_name)\n",
-    "X_features = pd.read_csv('../data/vid/trainingSet/raw/raw.csv')\n",
-    "\n",
-    "\n",
-    "scaler = StandardScaler()\n",
-    "X_features_scaled = scaler.fit_transform(X_features)\n",
-    "pca = PCA(n_components=20)\n",
-    "pca.fit(X_features_scaled)\n",
-    "x_reduced = pca.transform(X_features_scaled)\n",
-    "\n",
-    "alpha_list = sound_to_csv.add_label()\n",
-    "full = pd.DataFrame(np.append(classifier[np.newaxis].T, np.vstack((alpha_list,x_reduced)),1))\n",
-    "full.to_csv (r'../data/vid/trainingSet/raw/full.csv', index = None, header=False)\n",
-    "\n",
+    "training_folder = '../data/vid/trainingSet/raw'\n",
+    "audio_create_model.create_model(training_folder)\n",
+    "audio_input.audio_input('userInput.wav')\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#### user input sound and dimension reduction\n",
-    "\n",
-    "user_sound  = sound_to_csv.convert_mel_one('test.wav')\n",
-    "X_features.loc[len(X_features)] = user_sound\n",
-    "\n",
-    "scaler = StandardScaler()\n",
-    "X_features_scaled = scaler.fit_transform(X_features)\n",
-    "pca = PCA(n_components=20)\n",
-    "pca.fit(X_features_scaled)\n",
-    "x_reduced = pca.transform(X_features_scaled)\n",
-    "\n",
-    "alpha_list = sound_to_csv.add_label()\n",
-    "user_output = pd.DataFrame(np.vstack((alpha_list,x_reduced[-1])))"
    ]
   }
  ],
