comp spec edited MN

--- a/doc/component_specifications.ipynb
+++ b/doc/component_specifications.ipynb
@@ -85,7 +85,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.1 Interaction 1: Upload video (Minh)"
+    "### 2.1 Interaction 1: Upload video (Minh)\n",
+    "The component accepts the video input from the user. Unless it's the required file type (.mp4), it will prevent the user from proceeding to the next step."
    ]
   },
   {
@@ -152,7 +153,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
