--- a/Felinemotion/SVM.ipynb
+++ b/Felinemotion/SVM.ipynb
@@ -26,7 +26,8 @@
     "      raise ValueError(\"Invalid input file.\")\n",
     "    if not os.path.exists(audio):\n",
     "      raise ValueError(\"Invalid input file.\")\n",
-    "        \n",
+    "    \n",
+    "    \n",
     "    image = pd.read_csv(image)\n",
     "    audio = pd.read_csv(audio)\n",
     "\n",
@@ -34,7 +35,7 @@
     "    data = audio.merge(image, on='catID')\n",
     "    data = data.iloc[:,1:]\n",
     "    \n",
-    "    data.to_csv('data_test.csv')"
+    "    data.to_csv('userData/user_csv.csv')"
    ]
   },
   {
@@ -43,10 +44,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "csv_merge('userData/image_test.csv', 'userData/audio_test.csv' )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def classification(term):\n",
+    "    \n",
     "#     emotion should be included in audio file\n",
-    "    image = pd.read_csv('image.csv')\n",
-    "    audio = pd.read_csv('audio.csv')\n",
+    "    image = pd.read_csv('trainingData/image.csv')\n",
+    "    audio = pd.read_csv('trainingData/audio.csv')\n",
     "    \n",
     "    data = audio.merge(image, on='catID')\n",
     "    \n",
@@ -73,15 +84,6 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "csv_merge('image_test.csv', 'audio_test.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -94,16 +96,16 @@
     {
      "data": {
       "text/plain": [
-       "array(['angry'], dtype=object)"
+       "array(['happy'], dtype=object)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "classification('data_test.csv')"
+    "classification('userData/user_csv.csv')"
    ]
   },
   {
