--- a/doc/component_specifications.ipynb
+++ b/doc/component_specifications.ipynb
@@ -18,14 +18,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Describe at least 3 components specifying: what it does, inputs it requires, and outputs it provides. \n",
-    "a. data manager, which provides a simplified interface to your data and provides application specific features (e.g., querying data subsets); and b. visualization manager, which displays data frames as a plot."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### 1.1 Component 1: Upload video "
    ]
   },
@@ -33,7 +25,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Upload video component lets users to upload the video with cat in it. After clicking \"Upload\", the video will be ready for preprocessing. "
+    "Upload video component lets users to upload the video with cat in it. After clicking \"Upload\", the video will be ready for preprocessing. \n",
+    "<br>\n",
+    "Input: Video with cat face and meowing in mp4 format\n",
+    "<br>\n",
+    "Output: One audio and three images with cat face\n"
    ]
   },
   {
@@ -46,7 +42,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "3 images with cat face will be extracted randomly from the frame and prompt to the user. After user select one cat image and confirm it. The cat image will be delivered to the next face. \n",
+    "<br>\n",
+    "Input: three images with cat face\n",
+    "<br>\n",
+    "Output: one image with cat face"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -59,7 +61,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After user select one cat face image and select "
+    "After user select one cat face image and select \n",
+    "<br>\n",
+    "Input: one audio csv and one image csv \n",
+    "<br>\n",
+    "Output: cat emotion (happy, angry, hungry)"
    ]
   },
   {
@@ -73,14 +79,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Describe how the above software components interact to accomplish at least one of your use cases"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 2.1 Interaction 1: Upload video (Minh)\n",
+    "### 2.1 Interaction 1: Upload video \n",
     "The component accepts the video input from the user. Unless it's the required file type (.mp4), it will prevent the user from proceeding to the next step."
    ]
   },
@@ -88,14 +87,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.2 Interaction 2: Analyze the emotion (weishi)"
+    "### 2.2 Interaction 2: Select one cat image out of three cat images"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.3 Interaction 3: Evaluate felinmotion result by user (Yue)"
+    "The component accepts the three cat face images and prompt them into the screen so that user could select the one that they want to use in the analysis. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.3 Interaction 3: Evaluate cat emotion "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The component accepts the one audio csv file and one image csv file from previous process. After user click confirm button under the three cat face images, the two csv files will be prompt into the svm analysis part. Then the reuslt of the cat emotion will show in the screen."
    ]
   },
   {
