--- a/doc/functional_specifications.ipynb
+++ b/doc/functional_specifications.ipynb
@@ -39,7 +39,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The users of the system are cat owners."
+    "The users of the system are cat owners who curious their cat emotions. "
    ]
   },
   {
@@ -67,7 +67,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Videos with cat mewing from Google research  (https://research.google.com/audioset//////////ontology/cat.html) will be used to trained the data. The video will first be divided into audio dataset and image data sets. After that, CNN and Haar Casade Algorithm are used to extract the required data. Audio datasets and image dataset will then be converted into pixel arrays. Lastly, both datasets will be merged into one csv file."
+    "Due to the time limitation, training data were manually downloaded from youtubes. The video will first be divided into audio dataset and image data sets. After that, CNN and Haar Casade Algorithm are used to extract the required data. Audio datasets and image dataset will then be converted into pixel arrays. Lastly, both datasets will be merged into one csv file.\n",
+    "\n",
+    "### Data link:\n",
+    "<br>\n",
+    "Happy\n",
+    "<br>\n",
+    "https://www.youtube.com/watch?v=suUMt34qu5c\n",
+    "<br>\n",
+    "https://www.youtube.com/watch?time_continue=31&v=OEHhFtvE50A&feature=emb_logo\n",
+    "<br>\n",
+    "Hungry\n",
+    "<br>\n",
+    "https://www.youtube.com/watch?time_continue=36&v=-uGHAvfqs2I&feature=emb_logo\n",
+    "<br>\n",
+    "Angry\n",
+    "<br>\n",
+    "https://www.youtube.com/watch?v=Q5AncCWcnnA\n",
+    "<br>\n",
+    "https://www.youtube.com/watch?v=O2OjjzaG8mM\n",
+    "\n",
+    "### Data limitations: \n",
+    "We manually download the video and convert it into WAV and PNG files, so the variation of features is limited.\n",
+    "Only 3 emotions were classified due to the limited size of dataset. \n",
+    "\n"
    ]
   },
   {
@@ -81,9 +104,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1.\tUsers upload a video with a cat maowing\n",
-    "2.\tSystem analyzes the video and provides the results to the users\n",
-    "3.\tUsers evaluate the results."
+    "1.\tUsers upload a video with a cat maowing and cat face\n",
+    "2.  User select one cat face image out of three randomly selected cat face images\n",
+    "3.\tSystem analyzes the video and provides the results to the users"
    ]
   }
  ],
@@ -103,7 +126,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
