--- a/doc/component_specifications.ipynb
+++ b/doc/component_specifications.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.1 Component 1: Visulization manager"
+    "### 1.1 Component 1: Visualization manager"
    ]
   },
   {
